# portable-code-indexer

./: .gitignore  BENCHMARK_COMPARISON_PLAN.md  DAEMON_USAGE_GUIDE.md  DUAL_METHODOLOGY_COMPARISON.md  EMBEDDING_SERVER_VERIFICATION.md  EMBEDDING_TEST_REPORT.md  EXAMPLES.md  FINAL_BENCHMARK_RESULTS.md  FINAL_STATUS.md  FINAL_SUMMARY.md  FUTURE_WORK.md  IMPLEMENTATION_SUMMARY.md  KNOWN_LIMITATIONS.md  MODEL_COMPARISON.md  OPENAI_EMBEDDING_TEST_FINAL.md  PHASE1_BENCHMARK_REPORT.md  PHASE2_LLM_BENCHMARKS.md  QUICKSTART.md  README.md  REVIEW.md  ROADMAP.md  ROADMAP_TO_CHUNKHOUND_PARITY.md  SESSION_SUMMARY.md  STATUS.md  STORAGE_GUIDE.md  TEST_RESULTS.md  VALIDATION.md  pyproject.toml  test_auto_unload.py  test_basic.py  test_cli_integration.py  test_embedding_server.py
.github/workflows/: ci.yml  e2e-multi-language.yml  release.yml
.pci/: config.json
docs/: ARCHITECTURE.md  BENCHMARK_METHODOLOGY.md  BENCHMARK_RESULTS.md  CLI_FEATURES.md  CODE_STRUCTURE.md  INDEXING.md  LLM_CLI_INTEGRATION.md  MEMORY_FEATURES.md  PERFORMANCE_ANALYSIS.md  QUERYING.md  search_investigation.md
docs/references/: research-papers.md
examples/: CLI_TEST_RESULTS.md  README.md
pci/: __init__.py  cli.py  config.py
pci/core/: models.py  types.py
pci/indexer/: chunk_index.py  coordinator.py
pci/parser/: chunker.py  concepts.py  engine.py
pci/search/: entity_extractor.py  multi_hop.py
pci/storage/: backend.py
pilot_results/: PILOT_RESULTS.md
results/academic/: grep_ground-truth-sia-code_k5.json  sia-code_ground-truth-sia-code_k5.json
scripts/: run-e2e-local.sh
sia_code/: __init__.py  cli.py  config.py
sia_code/core/: models.py
sia_code/embed_server/: client.py  daemon.py  protocol.py
sia_code/indexer/: coordinator.py  dependency_discovery.py
sia_code/memory/: git_events.py  git_sync.py
sia_code/parser/: chunker.py
sia_code/search/: chunkhound_cli.py  multi_hop.py
sia_code/storage/: backend.py  base.py  factory.py  sqlite_runtime.py  sqlite_vec_backend.py  usearch_backend.py
skills/sia-code/: SKILL.md
test_project/.pci/: config.json
tests/: test_basic.py  test_cli_integration.py  test_empty_code_fix.py  test_pagination_debug.py  test_sqlite_vec_backend.py  test_usearch_backend.py
tests/benchmarks/: README.md  __init__.py  chunking_comparison.py  compare_embeddings.py  harness.py  llm_evaluation.py  metrics.py  retrievers.py  run_academic_benchmarks.py  run_benchmarks.py  run_full_repoeval_benchmark.py  run_llm_benchmarks.py  run_repoeval_benchmark.py  test_metrics.py
tests/benchmarks/datasets/: __init__.py  ground_truth_sia_code.py  repoeval_loader.py  simple_loader.py
tests/benchmarks/tasks/: __init__.py  architectural_tasks.py  evaluation_prompts.py
tests/e2e/: README.md  __init__.py  base_e2e_test.py  conftest.py  test_cpp_e2e.py  test_csharp_e2e.py  test_go_e2e.py  test_java_e2e.py  test_javascript_e2e.py  test_performance_benchmarks.py  test_php_e2e.py  test_python_e2e.py  test_ruby_e2e.py  test_rust_e2e.py  test_semantic_quality.py  test_typescript_e2e.py
tests/integration/: test_batch_indexing_search.py  test_v1_v2_equivalence.py  test_watch_mode.py
tests/unit/: test_chunker.py  test_chunkhound_cli.py  test_concepts.py  test_config.py  test_dependency_discovery.py  test_embed_client_framing.py  test_embed_daemon_start.py  test_git_sync.py  test_index_dir_resolution.py  test_indexer_buffering.py  test_multi_hop.py  test_open_index_writable.py  test_query_preprocessor.py  test_tier_filtering.py  test_usearch_backend_batching.py
