[project]
name = "pci"
version = "0.1.0"
description = "Portable Code Index - Local-first codebase intelligence using Memvid"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "PCI Contributors"}
]

dependencies = [
    "memvid-sdk>=2.0",
    "tree-sitter>=0.21.0",
    "tree-sitter-python>=0.21.0",
    "tree-sitter-javascript>=0.21.0",
    "tree-sitter-typescript>=0.21.0",
    "click>=8.0",
    "rich>=13.0",
    "pathspec>=0.11",
    "pydantic>=2.0",
]

[project.optional-dependencies]
openai = ["openai>=1.0"]
pdf = ["pypdf>=3.0"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pyinstaller>=5.0",
    "black>=23.0",
    "ruff>=0.1.0",
]

[project.scripts]
pci = "pci.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["pci*"]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
